--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
     color: #000;
 }
 
+
+
 h1 {
     margin: 0;
 }
@@ -41,8 +43,12 @@ nav {
     width: 33%;
 }
 
-a {
+.nav-button {
     color: white;
+}
+
+a {
+    color: black;
     text-decoration: none;
     transition: all 0.3s ease;
 }
@@ -53,6 +59,8 @@ a:hover {
 
 #accueil {
     padding-top: 15rem;
+    /*background-image: url("images/mbphoto.jpg");
+    background-size: cover;*/
 }
 
 .container {
@@ -72,70 +80,24 @@ footer {
     padding: 10px 0;
 }       
 
-/*.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
+hr {
+    border: 1px solid #000; /* Couleur et style de la bordure */
+    margin: 90px 0; /* Marge au-dessus et en dessous du séparateur */
 }
 
-a {
-    transition: background-color 0.5s;
-}
-  
-a:hover {
-    background-color: gray;
-}
-
-nav {
-    background-color: #111;
-    color: #fff;
-    padding: 10px 0;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-section {
-    padding: 40px 0;
-    background-color: #f2f2f2; 
-}
-
-
-
-.text-zone {
-    max-width: 100px;
-    margin: 0 auto;
-    text-align: justify;
-    line-height: 1.5;
-}
-
-.text-zone p {
-    margin-bottom: 15px;
-}
-
-.centered-text {
+#galerie {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
+    gap: 25px;
 }
-*/
+
+.schema {
+    width: 500px; /* Redimensionner en largeur à 300 pixels */
+    height: auto; /* Garder le ratio original en ajustant automatiquement la hauteur */
+}
+
+.line {
+    border-bottom: 1.5px solid black;
+    width: 35%;
+}
